lib/fun3/python/n3/grammar/parser/n3Parser.py
# Generated from n3.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class n3Parser ( Parser ):

    grammarFileName = "n3.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "'@prefix'", "'@base'", "';'", 
                     "','", "'a'", "'has'", "'is'", "'of'", "'='", "'<='", 
                     "'=>'", "'<-'", "'!'", "'^'", "'['", "']'", "'('", 
                     "')'", "'{'", "'}'", "'^^'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "COMMENT", 
                      "BooleanLiteral", "String", "IRIREF", "PNAME_NS", 
                      "PNAME_LN", "BLANK_NODE_LABEL", "LANGTAG", "INTEGER", 
                      "DECIMAL", "DOUBLE", "EXPONENT", "STRING_LITERAL_LONG_SINGLE_QUOTE", 
                      "STRING_LITERAL_LONG_QUOTE", "STRING_LITERAL_QUOTE", 
                      "STRING_LITERAL_SINGLE_QUOTE", "UCHAR", "ECHAR", "WS", 
                      "IPLSTART", "ANON", "QuickVarName", "PN_CHARS_U", 
                      "PN_CHARS_BASE", "PN_CHARS", "BASE", "PREFIX", "PN_PREFIX", 
                      "PN_LOCAL", "PLX", "PERCENT", "HEX", "PN_LOCAL_ESC" ]

    RULE_n3Doc = 0
    RULE_n3Statement = 1
    RULE_n3Directive = 2
    RULE_sparqlDirective = 3
    RULE_sparqlBase = 4
    RULE_sparqlPrefix = 5
    RULE_prefixID = 6
    RULE_base = 7
    RULE_triples = 8
    RULE_predicateObjectList = 9
    RULE_objectList = 10
    RULE_verb = 11
    RULE_subject = 12
    RULE_predicate = 13
    RULE_object = 14
    RULE_expression = 15
    RULE_path = 16
    RULE_pathItem = 17
    RULE_literal = 18
    RULE_blankNodePropertyList = 19
    RULE_iriPropertyList = 20
    RULE_collection = 21
    RULE_formula = 22
    RULE_formulaContent = 23
    RULE_numericLiteral = 24
    RULE_rdfLiteral = 25
    RULE_iri = 26
    RULE_prefixedName = 27
    RULE_blankNode = 28
    RULE_quickVar = 29

    ruleNames =  [ "n3Doc", "n3Statement", "n3Directive", "sparqlDirective", 
                   "sparqlBase", "sparqlPrefix", "prefixID", "base", "triples", 
                   "predicateObjectList", "objectList", "verb", "subject", 
                   "predicate", "object", "expression", "path", "pathItem", 
                   "literal", "blankNodePropertyList", "iriPropertyList", 
                   "collection", "formula", "formulaContent", "numericLiteral", 
                   "rdfLiteral", "iri", "prefixedName", "blankNode", "quickVar" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    COMMENT=23
    BooleanLiteral=24
    String=25
    IRIREF=26
    PNAME_NS=27
    PNAME_LN=28
    BLANK_NODE_LABEL=29
    LANGTAG=30
    INTEGER=31
    DECIMAL=32
    DOUBLE=33
    EXPONENT=34
    STRING_LITERAL_LONG_SINGLE_QUOTE=35
    STRING_LITERAL_LONG_QUOTE=36
    STRING_LITERAL_QUOTE=37
    STRING_LITERAL_SINGLE_QUOTE=38
    UCHAR=39
    ECHAR=40
    WS=41
    IPLSTART=42
    ANON=43
    QuickVarName=44
    PN_CHARS_U=45
    PN_CHARS_BASE=46
    PN_CHARS=47
    BASE=48
    PREFIX=49
    PN_PREFIX=50
    PN_LOCAL=51
    PLX=52
    PERCENT=53
    HEX=54
    PN_LOCAL_ESC=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class N3DocContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(n3Parser.EOF, 0)

        def n3Statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(n3Parser.N3StatementContext)
            else:
                return self.getTypedRuleContext(n3Parser.N3StatementContext,i)


        def sparqlDirective(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(n3Parser.SparqlDirectiveContext)
            else:
                return self.getTypedRuleContext(n3Parser.SparqlDirectiveContext,i)


        def getRuleIndex(self):
            return n3Parser.RULE_n3Doc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterN3Doc" ):
                listener.enterN3Doc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitN3Doc" ):
                listener.exitN3Doc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitN3Doc" ):
                return visitor.visitN3Doc(self)
            else:
                return visitor.visitChildren(self)




    def n3Doc(self):

        localctx = n3Parser.N3DocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_n3Doc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 875227346436108) != 0):
                self.state = 64
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [2, 3, 16, 18, 20, 24, 25, 26, 27, 28, 29, 31, 32, 33, 42, 43, 44]:
                    self.state = 60
                    self.n3Statement()
                    self.state = 61
                    self.match(n3Parser.T__0)
                    pass
                elif token in [48, 49]:
                    self.state = 63
                    self.sparqlDirective()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.match(n3Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class N3StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def n3Directive(self):
            return self.getTypedRuleContext(n3Parser.N3DirectiveContext,0)


        def triples(self):
            return self.getTypedRuleContext(n3Parser.TriplesContext,0)


        def getRuleIndex(self):
            return n3Parser.RULE_n3Statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterN3Statement" ):
                listener.enterN3Statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitN3Statement" ):
                listener.exitN3Statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitN3Statement" ):
                return visitor.visitN3Statement(self)
            else:
                return visitor.visitChildren(self)




    def n3Statement(self):

        localctx = n3Parser.N3StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_n3Statement)
        try:
            self.state = 73
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.n3Directive()
                pass
            elif token in [16, 18, 20, 24, 25, 26, 27, 28, 29, 31, 32, 33, 42, 43, 44]:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.triples()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class N3DirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prefixID(self):
            return self.getTypedRuleContext(n3Parser.PrefixIDContext,0)


        def base(self):
            return self.getTypedRuleContext(n3Parser.BaseContext,0)


        def getRuleIndex(self):
            return n3Parser.RULE_n3Directive

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterN3Directive" ):
                listener.enterN3Directive(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitN3Directive" ):
                listener.exitN3Directive(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitN3Directive" ):
                return visitor.visitN3Directive(self)
            else:
                return visitor.visitChildren(self)




    def n3Directive(self):

        localctx = n3Parser.N3DirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_n3Directive)
        try:
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.prefixID()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.base()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SparqlDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sparqlBase(self):
            return self.getTypedRuleContext(n3Parser.SparqlBaseContext,0)


        def sparqlPrefix(self):
            return self.getTypedRuleContext(n3Parser.SparqlPrefixContext,0)


        def getRuleIndex(self):
            return n3Parser.RULE_sparqlDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSparqlDirective" ):
                listener.enterSparqlDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSparqlDirective" ):
                listener.exitSparqlDirective(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSparqlDirective" ):
                return visitor.visitSparqlDirective(self)
            else:
                return visitor.visitChildren(self)




    def sparqlDirective(self):

        localctx = n3Parser.SparqlDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_sparqlDirective)
        try:
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [48]:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.sparqlBase()
                pass
            elif token in [49]:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.sparqlPrefix()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SparqlBaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BASE(self):
            return self.getToken(n3Parser.BASE, 0)

        def IRIREF(self):
            return self.getToken(n3Parser.IRIREF, 0)

        def getRuleIndex(self):
            return n3Parser.RULE_sparqlBase

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSparqlBase" ):
                listener.enterSparqlBase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSparqlBase" ):
                listener.exitSparqlBase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSparqlBase" ):
                return visitor.visitSparqlBase(self)
            else:
                return visitor.visitChildren(self)




    def sparqlBase(self):

        localctx = n3Parser.SparqlBaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sparqlBase)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(n3Parser.BASE)
            self.state = 84
            self.match(n3Parser.IRIREF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SparqlPrefixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PREFIX(self):
            return self.getToken(n3Parser.PREFIX, 0)

        def PNAME_NS(self):
            return self.getToken(n3Parser.PNAME_NS, 0)

        def IRIREF(self):
            return self.getToken(n3Parser.IRIREF, 0)

        def getRuleIndex(self):
            return n3Parser.RULE_sparqlPrefix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSparqlPrefix" ):
                listener.enterSparqlPrefix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSparqlPrefix" ):
                listener.exitSparqlPrefix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSparqlPrefix" ):
                return visitor.visitSparqlPrefix(self)
            else:
                return visitor.visitChildren(self)




    def sparqlPrefix(self):

        localctx = n3Parser.SparqlPrefixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_sparqlPrefix)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(n3Parser.PREFIX)
            self.state = 87
            self.match(n3Parser.PNAME_NS)
            self.state = 88
            self.match(n3Parser.IRIREF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrefixIDContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PNAME_NS(self):
            return self.getToken(n3Parser.PNAME_NS, 0)

        def IRIREF(self):
            return self.getToken(n3Parser.IRIREF, 0)

        def getRuleIndex(self):
            return n3Parser.RULE_prefixID

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrefixID" ):
                listener.enterPrefixID(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrefixID" ):
                listener.exitPrefixID(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrefixID" ):
                return visitor.visitPrefixID(self)
            else:
                return visitor.visitChildren(self)




    def prefixID(self):

        localctx = n3Parser.PrefixIDContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_prefixID)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(n3Parser.T__1)
            self.state = 91
            self.match(n3Parser.PNAME_NS)
            self.state = 92
            self.match(n3Parser.IRIREF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IRIREF(self):
            return self.getToken(n3Parser.IRIREF, 0)

        def getRuleIndex(self):
            return n3Parser.RULE_base

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBase" ):
                listener.enterBase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBase" ):
                listener.exitBase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBase" ):
                return visitor.visitBase(self)
            else:
                return visitor.visitChildren(self)




    def base(self):

        localctx = n3Parser.BaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_base)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(n3Parser.T__2)
            self.state = 95
            self.match(n3Parser.IRIREF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TriplesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subject(self):
            return self.getTypedRuleContext(n3Parser.SubjectContext,0)


        def predicateObjectList(self):
            return self.getTypedRuleContext(n3Parser.PredicateObjectListContext,0)


        def getRuleIndex(self):
            return n3Parser.RULE_triples

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTriples" ):
                listener.enterTriples(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTriples" ):
                listener.exitTriples(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTriples" ):
                return visitor.visitTriples(self)
            else:
                return visitor.visitChildren(self)




    def triples(self):

        localctx = n3Parser.TriplesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_triples)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.subject()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 30802416319936) != 0):
                self.state = 98
                self.predicateObjectList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredicateObjectListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def verb(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(n3Parser.VerbContext)
            else:
                return self.getTypedRuleContext(n3Parser.VerbContext,i)


        def objectList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(n3Parser.ObjectListContext)
            else:
                return self.getTypedRuleContext(n3Parser.ObjectListContext,i)


        def getRuleIndex(self):
            return n3Parser.RULE_predicateObjectList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicateObjectList" ):
                listener.enterPredicateObjectList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicateObjectList" ):
                listener.exitPredicateObjectList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicateObjectList" ):
                return visitor.visitPredicateObjectList(self)
            else:
                return visitor.visitChildren(self)




    def predicateObjectList(self):

        localctx = n3Parser.PredicateObjectListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_predicateObjectList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.verb()
            self.state = 102
            self.objectList()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 103
                self.match(n3Parser.T__3)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 30802416319936) != 0):
                    self.state = 104
                    self.verb()
                    self.state = 105
                    self.objectList()


                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def object_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(n3Parser.ObjectContext)
            else:
                return self.getTypedRuleContext(n3Parser.ObjectContext,i)


        def getRuleIndex(self):
            return n3Parser.RULE_objectList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjectList" ):
                listener.enterObjectList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjectList" ):
                listener.exitObjectList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjectList" ):
                return visitor.visitObjectList(self)
            else:
                return visitor.visitChildren(self)




    def objectList(self):

        localctx = n3Parser.ObjectListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_objectList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.object_()
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 115
                self.match(n3Parser.T__4)
                self.state = 116
                self.object_()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VerbContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predicate(self):
            return self.getTypedRuleContext(n3Parser.PredicateContext,0)


        def expression(self):
            return self.getTypedRuleContext(n3Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return n3Parser.RULE_verb

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVerb" ):
                listener.enterVerb(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVerb" ):
                listener.exitVerb(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVerb" ):
                return visitor.visitVerb(self)
            else:
                return visitor.visitChildren(self)




    def verb(self):
